fixed spacing between share btn

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -834,7 +834,7 @@ pre {
   }
   
   .d-share{
-    display: block;
+    display: flex;
   }
   
 }
